force-app/main/default/objects/Activity/fields/LLC_BI__Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Assignment_Group__c</fullName>
    <description>Id for group assigned automatically assigned to specific tasks</description>
    <label>Assignment Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>