force-app/main/default/objects/Activity/fields/LLC_BI__Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Estimated_Time__c</fullName>
    <description>Estimated number of hours/days to complete a Task</description>
    <inlineHelpText>Enter estimated time to complete a task</inlineHelpText>
    <label>Estimated Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>