force-app/main/default/objects/Activity/fields/LLC_BI__Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Group</label>
    <referenceTo>nFORCE__Group__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>