force-app/main/default/objects/Activity/fields/LLC_BI__Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maintenance_Type__c</fullName>
    <description>This field describes the current Maintenance category for a particular Maintenance Task</description>
    <label>Maintenance Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>