force-app/main/default/objects/Activity/fields/LLC_BI__Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent_Task__c</fullName>
    <description>This is a text field to house the parent Task Id for maintenance subtasks.</description>
    <label>Parent Task</label>
    <length>20</length>
    <type>Text</type>
</CustomField>