force-app/main/default/objects/Activity/listViews/LLC_BI__AllActivities.listView-meta.xml
<ListView>
    <fullName>LLC_BI__AllActivities</fullName>
    <filterScope>Team</filterScope>
    <label>All Activities</label>
</ListView>