force-app/main/default/objects/Activity/listViews/LLC_BI__Ancillary_Service_Task_Templates.listView-meta.xml
<ListView>
    <fullName>LLC_BI__Ancillary_Service_Task_Templates</fullName>
    <columns>LLC_BI__isTemplate__c</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LLC_BI__isTemplate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Ancillary Service Task Templates</label>
</ListView>