force-app/main/default/objects/Activity/listViews/LLC_BI__MyActivities.listView-meta.xml
<ListView>
    <fullName>LLC_BI__MyActivities</fullName>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
</ListView>